--- a/predict_notebook.ipynb
+++ b/predict_notebook.ipynb
@@ -145,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('anti_spoof')",
+   "display_name": "Python 3.9.13 ('test')",
    "language": "python",
    "name": "python3"
   },
@@ -159,12 +159,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9abefb7b41f8fff08676db9733baffcab9bbc094cc4a60c8a0ac1f57538e7c55"
+    "hash": "9cdd3a2faeb081278cb5e2537844d6d2bbfad5ce1371e8d4f4800df3bc588d33"
    }
   }
  },
